<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6BEB3"
    tools:context=".MainActivity.MainActivity">

    <ImageView
        android:id="@+id/ImageViewLoginBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewLoginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditTextLoginUsername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/email"
        app:boxBackgroundColor="#ffffff"
        app:boxBackgroundMode="filled"
        app:layout_constraintBottom_toTopOf="@+id/EditTextLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditTextLoginPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxBackgroundColor="#ffffff"
        app:boxBackgroundMode="filled"
        app:layout_constraintBottom_toTopOf="@+id/ButtonLoginForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ButtonLoginForgotPassword"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/ButtonLogin"
        app:layout_constraintEnd_toEndOf="@+id/EditTextLoginPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ButtonLogin"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/ButtonLoginDontHaveAnAccount"
        app:layout_constraintEnd_toEndOf="@+id/ButtonLoginDontHaveAnAccount"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="@+id/ButtonLoginDontHaveAnAccount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ButtonLoginDontHaveAnAccount"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="140dp"
        android:text="@string/dont_have_an_account"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>