<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/availableMeeting"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/calendar_box"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/meetingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/placeholer_meeting_time"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/meetingLocation" />

    <TextView
        android:id="@+id/meetingSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/placeholer_meeting_subject"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meetingLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:text="Location"
        android:fontFamily="@font/roboto"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/startMeetingButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_button"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/play_available"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/start"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>
